# CodeExamples

Box2DDemo/: settings.gradle.kts
Box2DDemo/app/: build.gradle.kts
Box2DDemo/app/src/main/cpp/: CMakeLists.txt  box2ddemo.cpp
CameraIntentExample/: settings.gradle.kts
CameraIntentExample/app/: build.gradle.kts
ComposeDemo/: settings.gradle.kts
ComposeDemo/app/: build.gradle.kts
CustomViewDemo/: build.gradle.kts  settings.gradle.kts
CustomViewDemo/app/: build.gradle.kts
DynamicFragment/: settings.gradle.kts
DynamicFragment/app/: build.gradle.kts
DynamicSingleFragment/: settings.gradle.kts
DynamicSingleFragment/app/: build.gradle.kts
DynamicSingleFragment/gradle/: libs.versions.toml
EmailSplitter/: settings.gradle.kts
EmailSplitter/app/: build.gradle.kts
FirebaseDemo/: build.gradle.kts  settings.gradle.kts
FirebaseDemo/app/: build.gradle.kts
FirebaseDemo/firebaseEmulator/: .firebaserc  firebase.json~  firestore.rules  firestore.rules~  storage.rules  storage.rules~  users.out
FirebaseDemo/gradle/: libs.versions.toml
FragmentDemo/: settings.gradle.kts
FragmentDemo/app/: build.gradle.kts
GyroscopeDemo/: settings.gradle.kts
GyroscopeDemo/app/: build.gradle.kts
HTTPDemo/: build.gradle.kts  settings.gradle.kts
HTTPDemo/app/: build.gradle.kts
HelloWorld/: build.gradle.kts
HelloWorld/app/: build.gradle.kts
LightSensorDemo/: settings.gradle.kts
LightSensorDemo/app/: build.gradle.kts
MVVMWithRecyclerView/: settings.gradle.kts
MVVMWithRecyclerView/app/: build.gradle.kts
MapIntentExample/: settings.gradle.kts
MapIntentExample/app/: build.gradle.kts
MixedCompose/: settings.gradle.kts
MixedCompose/app/: build.gradle.kts
MixedCompose/gradle/: libs.versions.toml
NavigationDemo/: settings.gradle.kts
NavigationDemo/app/: build.gradle.kts
NetworkingDemo/: settings.gradle.kts
NetworkingDemo/app/: build.gradle.kts
OpenglDemo/: build.gradle  gradle.properties
OpenglDemo/app/: build.gradle
SensorListDemo/: settings.gradle.kts
SensorListDemo/app/: build.gradle.kts
StorageDemo/: settings.gradle.kts
StorageDemo/app/: build.gradle.kts
TwoFragmentsOneVM/: settings.gradle.kts
WeatherDemo/: build.gradle.kts  settings.gradle.kts
emailSplitter2Activities/: settings.gradle.kts
(+261 files in other folders)
